wp2/t2.1/v2.0/demo/jenkins/.jen/jobs/Diaspora_store_to_graph/builds/21/log
Started by user [8mha:////4IGVMtvk6iK1hwW+PI4nElqD5WuZBmgWM1foNK6n5D+9AAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzuEgZu/dLi1CL9ovyMzBIAOOgHy8AAAAA=[0mrohit gupta
Running as SYSTEM
Building in workspace /var/jenkins_home/workspace/diaspora_store_to_graph
[diaspora_store_to_graph] $ /bin/sh -xe /tmp/jenkins7774857793357541588.sh
+ python3 store.py
  File "/var/jenkins_home/workspace/diaspora_store_to_graph/store.py", line 89
    
    ^
SyntaxError: unexpected EOF while parsing
Build step 'Execute shell' marked build as failure
Finished: FAILURE
